package p21_mediator;

public abstract class Mediator {
    abstract void messageHandler(String message, Singer singer);
}
